syntax = "proto3";

package proto;

service GoTSDB {
  rpc KvsSave(KvsStoreRequest) returns (KvsStoreResponse);
  rpc KvsKeyExists(KvsKeyExistsRequest) returns (KvsKeyExistsResponse);
  rpc KvsRetrieve(KvsRetrieveRequest) returns (KvsRetrieveResponse);
  rpc KvsDelete(KvsDeleteRequest) returns (KvsDeleteResponse);
}

message KvsStoreRequest {
  uint32 msgId = 1;
  bytes key = 2;
  bytes value = 3;
}

message KvsStoreResponse {
  uint32 msgId = 1;
  bool ok = 2;
}

message KvsKeyExistsRequest {
  uint32 msgId = 1;
  bytes key = 2;
}

message KvsKeyExistsResponse {
  uint32 msgId = 1;
  bool exists = 2;
}

message KvsRetrieveRequest {
  uint32 msgId = 1;
  bytes key = 2;
}

message KvsRetrieveResponse {
  uint32 msgId = 1;
  bytes value = 2;
}

message KvsDeleteRequest {
  uint32 msgId = 1;
  bytes key = 2;
}

message KvsDeleteResponse {
  uint32 msgId = 1;
  bool ok = 2;
}